WIP for modernizing Crunch deps